updating config view

--- a/server/dive_server/web_client/templates/configView.pug
+++ b/server/dive_server/web_client/templates/configView.pug
@@ -1,5 +1,4 @@
 
 .g-config-breadcrumb-container
-p.
-  This is just a template area to put in some data
-
+p.g-dive-server-description
+  Some temporary holding text until the plugin settings are full configured.
