vue-girder-slicer defaults, styling, disabled slicer params

--- a/dive-dsa-slicer/vue-girder-slicer-ui/src/tailwind.css
+++ b/dive-dsa-slicer/vue-girder-slicer-ui/src/tailwind.css
@@ -141,6 +141,10 @@
       font-weight: bold;
       color:red;
     }
+    .warning-msg {
+      font-weight: bold;
+      color: darkorange;
+    }
     .gsu-selected-items {
       @apply bg-yellow-200;
     }
