SAM2 demo model selection, css improvements, default trackId, SelectedTrackId and TrackTypes

--- a/dive-dsa-slicer/vue-girder-slicer-ui/src/tailwind.css
+++ b/dive-dsa-slicer/vue-girder-slicer-ui/src/tailwind.css
@@ -152,6 +152,7 @@
       color: var(--bs-body-color);
     }
     .gsu-selection {
+      @apply bg-backgroundColor border-borderColor border-2 border-solid;
     }
     .text-left {
       text-align: left;
